# ascii-api

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  dev-docker-compose.yml  docker-compose.yml  mypy.ini  pyproject.toml
.github/workflows/: lint.yml  unit-test.yml
.plan/: ascii-api-plan.md
app/: __init__.py  auth.py  config.py  dependencies.py  exceptions.py  logging.py  main.py  metrics.py  middleware.py
app/routers/: __init__.py  health.py  images.py
app/schemas/: error.py  health.py  image.py
app/services/: __init__.py  ascii_converter.py  rate_limiter.py  validators.py
app/utils/: constants.py
docs/: CODE_OF_CONDUCT.md
tests/: conftest.py  test_ascii_converter.py  test_auth.py  test_routers.py  test_validators.py
